added - background-image

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </p>
                 </fieldset>
             </form>
-            <p class="js-result" form__resultText></p>
+            <p class="js-result form__resultText"></p>
         </section>
     </main>
 </body>
